# rust_game_invaders

./: .gitignore  Cargo.toml  rustfmt.toml
src/: components.rs  config.rs  enemy.rs  main.rs  player.rs
